--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can_bem",
-  "version": "0.0.1-pre",
+  "version": "0.0.1",
   "devDependencies": {
     "grunt": "0.4.x",
     "grunt-contrib-jshint": "0.6.x",
